# lcd_simulator

./: .gitignore  CMakeLists.txt  README.md  build.sh
7seg/: segments.json  segments.v
game/: segments.json  segments.v
src/: displayer.hpp  main.cpp  segment.hpp  segments_generator.hpp  top.v
